--- a/index.html
+++ b/index.html
@@ -1,20 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Portfolio</title>
+   <link rel="stylesheet" href="./styles/style.css">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Raleway&display=swap" rel="stylesheet">
 </head>
+
 <body>
    <header>
-
+      <nav id="navbar" class="nav">
+         <ul class="nav--list">
+            <li><a href="#welcome-section">About</a></li>
+            <li><a href="#projects">Projects</a></li>
+            <li><a href="#contact">Contact</a></li>
+         </ul>
+      </nav>
    </header>
    <main>
-
+      <section id="welcome-section" class="profile">
+         <h2 class="profile--title">Jose Manuel Osorio</h2>
+         <p class="profile--description">junior FrontEnd developer with React</p>
+      </section>
+      <section id="projects">
+         <div class="projects-card">
+            <h2 class="project-tile">Tribute page</h2>
+            <img src="https://i.imgur.com/7Mv0S3q.png" alt="img-tribute-page">
+            <a href="">Link</a>
+         </div>
+         <div class="projects-card">
+            <h2 class="project-tile"></h2>
+            <img src="" alt="">
+            <a href="">Link</a>
+         </div>
+         <div class="projects-card">
+            <h2 class="project-tile"></h2>
+            <img src="" alt="">
+            <a href="">Link</a>
+         </div>
+         <div class="projects-card">
+            <h2 class="project-tile"></h2>
+            <img src="" alt="">
+            <a href="">Link</a>
+         </div>
+      </section>
+      <section id="contact">
+         <a id="profile-link" href=""></a>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime minus sed praesentium accusamus officiis
+            obcaecati recusandae beatae ut. Eum molestiae vitae quisquam sint similique! Odit necessitatibus rem
+            voluptates perferendis doloribus!</p>
+      </section>
    </main>
    <footer>
-      
+
    </footer>
+   <!-- <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script> -->
 </body>
+
 </html>
